package domain

import "time"

type ActivityData struct {
	Title     string
	URL       string
	CreatedAt time.Time
}
