package domain

type ReportType string

const (
	ReportTypeActivityLog    ReportType = "ACTIVITY_LOG"
	ReportTypeWeightedScore  ReportType = "WEIGHTED_SCORE"
)
